--- a/MVC.WebUI/Content/css/scss/website/fonts.scss
+++ b/MVC.WebUI/Content/css/scss/website/fonts.scss
@@ -13,6 +13,7 @@ Embedded OpenType (.eot) supported by Internet Explorer 4+
 
 /*
 http://www.fontspring.com/blog/the-new-bulletproof-font-face-syntax
+https://css-tricks.com/snippets/css/using-font-face/
 */
 
 @font-face {
