--- a/MVC.WebUI/Views/Home/index.cshtml
+++ b/MVC.WebUI/Views/Home/index.cshtml
@@ -1,8 +1,8 @@
-﻿@model MVC.WebUI.Models.HomePageViewModel
+﻿@model MVC.WebUI.Models.Home.HomeIndexViewModel
 @{
-    ViewBag.Title = Model.Page.Title;
-    ViewBag.Description = Model.Page.Description;
-    ViewBag.Keywords = Model.Page.Keywords;
+//ViewBag.Title = Model.Page.Title;
+//ViewBag.Description = Model.Page.Description;
+//ViewBag.Keywords = Model.Page.Keywords;
 }
 
 <article>
