Language dropdown added

--- a/MVC.WebUI/Views/Shared/_layout.cshtml
+++ b/MVC.WebUI/Views/Shared/_layout.cshtml
@@ -117,6 +117,7 @@
                 <input name="search" type="search" maxlength="100" accesskey="4" placeholder="Search..." required="required" pattern=".{3,100}" title="Your search must be between 3 and 100 characters long." />
                 <button>Search</button>
             </form>
+            @Html.Action("Languages", "Base")
         </header>
 
         <main role="main">
