Breadcrumb helper added + Contact page fixes

--- a/MVC.WebUI/Content/css/scss/website/bootstrap.scss
+++ b/MVC.WebUI/Content/css/scss/website/bootstrap.scss
@@ -23,14 +23,14 @@
     width: 100%;
 }
 
-    .layout-table > .left-col,
-    .layout-table > .right-col {
-        display: table-cell;
-        -moz-box-sizing: border-box;
-        -webkit-box-sizing: border-box;
-        box-sizing: border-box;
-        vertical-align: top;
-    }
+.layout-table > .left-col,
+.layout-table > .right-col {
+    display: table-cell;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    vertical-align: top;
+}
 
 
 /************************************************************************************************************************************************************************************/
@@ -42,24 +42,24 @@
     overflow: hidden;
 }
 
-    .dl-table > dt,
-    .dl-table > dd {
-        display: block;
-        width: 50%;
-        margin: 0;
-        margin-bottom: 0.3em;
-        box-sizing: border-box;
-    }
+.dl-table > dt,
+.dl-table > dd {
+    display: block;
+    width: 50%;
+    margin: 0;
+    margin-bottom: 0.3em;
+    box-sizing: border-box;
+}
 
-    .dl-table > dt {
-        float: left;
-        clear: both;
-        padding-right: 1em;
-    }
+.dl-table > dt {
+    float: left;
+    clear: both;
+    padding-right: 1em;
+}
 
-    .dl-table > dd {
-        float: right;
-    }
+.dl-table > dd {
+    float: right;
+}
 
 
 /************************************************************************************************************************************************************************************/
@@ -73,74 +73,79 @@
     border: 2px solid #CC0000;
 }
 
-    .alert h1,
-    .alert h2,
-    .alert h3,
-    .alert h4 {
-        margin-bottom: 0.8em;
-        font-weight: bold;
-    }
+.alert h1,
+.alert h2,
+.alert h3,
+.alert h4 {
+    margin-bottom: 0.8em;
+    font-weight: bold;
+}
 
-    .alert p {
-        margin-top: 0.8em;
-        margin-bottom: 0;
-    }
+.alert p {
+    margin-top: 0.8em;
+    margin-bottom: 0;
+}
 
-        .alert p:first-child {
-            margin-top: 0;
-        }
-
-
-    /* error alerts - shown when something has failed - e.g. form validation, 404 error, etc. */
-    .alert.error {
-        background-color: #FFEEEE;
-        border: 2px solid #CC0000;
-    }
+.alert p:first-child {
+    margin-top: 0;
+}
 
 
-    /* success alerts - shown when something has succeeded - e.g. when a form has been submitted properly, when an email has been sent successfully */
-    .alert.success {
-        background-color: #EEFFEE;
-        border: 2px solid #336633;
-    }
+/* error alerts - shown when something has failed - e.g. form validation, 404 error, etc. */
+.alert.error {
+    background-color: #FFEEEE;
+    border: 2px solid #CC0000;
+}
 
 
-    /* compact alert - puts all the text on to one line to save vertical space */
-    .alert.compact {
-        text-align: center;
-    }
+/* success alerts - shown when something has succeeded - e.g. when a form has been submitted properly, when an email has been sent successfully */
+.alert.success {
+    background-color: #EEFFEE;
+    border: 2px solid #336633;
+}
 
-        .alert.compact h1,
-        .alert.compact h2,
-        .alert.compact h3,
-        .alert.compact h4,
-        .alert.compact p {
-            display: inline;
-        }
 
-            .alert.compact h1::after,
-            .alert.compact h2::after,
-            .alert.compact h3::after,
-            .alert.compact h4::after {
-                content: ".";
-            }
+/* compact alert - puts all the text on to one line to save vertical space */
+.alert.compact {
+    text-align: center;
+}
+
+.alert.compact h1,
+.alert.compact h2,
+.alert.compact h3,
+.alert.compact h4,
+.alert.compact p {
+    display: inline;
+}
+
+.alert.compact h1::after,
+.alert.compact h2::after,
+.alert.compact h3::after,
+.alert.compact h4::after {
+    content: ".";
+}
 
 
 /************************************************************************************************************************************************************************************/
 /* BREADCRUMBS */
 /************************************************************************************************************************************************************************************/
 
+.breadcrumb {
+    padding: 0.4rem 0;
+    text-transform: capitalize;
+}
+
 .breadcrumb li {
     display: inline-block;
 }
 
-    .breadcrumb li::before {
-        content: " > ";
-    }
+.breadcrumb li::before {
+    content: " > ";
+}
 
-    .breadcrumb li:first-child::before {
-        content: none;
-    }
+.breadcrumb li:first-child::before {
+    content: none;
+}
 
 
 /************************************************************************************************************************************************************************************/
@@ -171,11 +176,11 @@
     border: 2px solid #CC0000;
 }
 
-    .validation-summary-errors ul {
-        margin: 0;
-        padding-left: 2em;
-        list-style: circle;
-    }
+.validation-summary-errors ul {
+    margin: 0;
+    padding-left: 2em;
+    list-style: circle;
+}
 
 .field-validation-error {
     color: #CC0000;
@@ -203,11 +208,11 @@ pre.code {
     resize: horizontal;
 }
 
-    pre.code > code:only-of-type {
-        display: block;
-        min-height: 1.2rem;
-        font-weight: normal;
-    }
+pre.code > code:only-of-type {
+    display: block;
+    min-height: 1.2rem;
+    font-weight: normal;
+}
 
 code var {
     color: #CC0000;
