--- a/MVC.WebUI/Views/Shared/_layout.cshtml
+++ b/MVC.WebUI/Views/Shared/_layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using MVC.WebUI.Helpers
+
+<!DOCTYPE html>
 
 @*
     Conditional Comments - not used in IE 10+
@@ -121,6 +123,7 @@
         </header>
 
         <main role="main">
+            @Html.Breadcrumb()
             @RenderBody()
         </main>
 
