ControllerName and ActionName parameters added to BreadcrumbHelper

--- a/MVC.WebUI/Views/Article/Details.cshtml
+++ b/MVC.WebUI/Views/Article/Details.cshtml
@@ -1,7 +1,11 @@
 ﻿@model MVC.WebUI.Models.Article.ArticleDetailsViewModel
+@using MVC.WebUI.Helpers
+
 @{
     ViewBag.Title = "Article";
 }
+
+@Html.Breadcrumb(actionName: Model.Article.Title)
 
 <article itemscope="itemscope" itemtype="http://schema.org/Article">
     <header>
