--- a/MVC.WebUI/Views/Article/Index.cshtml
+++ b/MVC.WebUI/Views/Article/Index.cshtml
@@ -1,7 +1,11 @@
 ﻿@model MVC.WebUI.Models.Article.ArticleIndexViewModel
+@using MVC.WebUI.Helpers
+
 @{
     ViewBag.Title = "Articles";
 }
+
+@Html.Breadcrumb()
 
 <section>
 
