--- a/MVC.WebUI/Views/Shared/_layout.cshtml
+++ b/MVC.WebUI/Views/Shared/_layout.cshtml
@@ -1,6 +1,4 @@
-﻿@using MVC.WebUI.Helpers
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 @*
     Conditional Comments - not used in IE 10+
@@ -123,7 +121,6 @@
         </header>
 
         <main role="main">
-            @Html.Breadcrumb()
             @RenderBody()
         </main>
 
