Breadcrumb added to all pages

--- a/MVC.WebUI/Views/Account/change-password.cshtml
+++ b/MVC.WebUI/Views/Account/change-password.cshtml
@@ -1,8 +1,11 @@
-﻿@model WebUI.Models.Account.ChangePasswordViewModel
-@using Domain.Helpers
+﻿@model MVC.WebUI.Models.Account.ChangePasswordViewModel
+@using MVC.WebUI.Helpers
+
 @{
     ViewBag.Title = "Change Password";
 }
+
+@Html.Breadcrumb()
 
 <article>
 	<h1>Change Password</h1>
