--- a/MVC.WebUI/Views/Account/index.cshtml
+++ b/MVC.WebUI/Views/Account/index.cshtml
@@ -1,16 +1,22 @@
-﻿@{
+﻿@using MVC.WebUI.Helpers
+
+@{
     ViewBag.Title = "My Account";
 }
 
-<h1>My Account</h1>
+@Html.Breadcrumb()
 
-@if (TempData["SuccessMessage"] != null)
-{
-	<section class="alert success">
-		<p>@TempData["SuccessMessage"]</p>
-	</section>
-}
+<section>
+    <h1>My Account</h1>
 
-<ul>
-	<li>@Html.ActionLink("Change Password", "change-password")</li>
-</ul>
+    @if (TempData["SuccessMessage"] != null)
+    {
+        <section class="alert success">
+            <p>@TempData["SuccessMessage"]</p>
+        </section>
+    }
+
+    <ul>
+        <li>@Html.ActionLink("Change Password", "change-password")</li>
+    </ul>
+</section>
