--- a/MVC.WebUI/Views/Account/login.cshtml
+++ b/MVC.WebUI/Views/Account/login.cshtml
@@ -1,5 +1,5 @@
-﻿@model WebUI.Models.Account.LoginViewModel
-@using Domain.Helpers
+﻿@model MVC.WebUI.Models.Account.LoginViewModel
+
 @{
 	ViewBag.Title = "Login";
 }
