--- a/MVC.WebUI/Views/Account/request-password.cshtml
+++ b/MVC.WebUI/Views/Account/request-password.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebUI.Models.Account.RequestPasswordViewModel
+﻿@model MVC.WebUI.Models.Account.RequestPasswordViewModel
 @{
     ViewBag.Title = "Request New Password";
 }
