--- a/MVC.WebUI/Views/Account/reset-password.cshtml
+++ b/MVC.WebUI/Views/Account/reset-password.cshtml
@@ -1,5 +1,6 @@
-﻿@model WebUI.Models.Account.ResetPasswordViewModel
-@using Domain.Helpers
+﻿@model MVC.WebUI.Models.Account.ResetPasswordViewModel
+@using MVC.Core.Configuration
+
 @{
 	ViewBag.Title = "Reset Password";
 }
@@ -12,7 +13,7 @@
 		<ol>
 			<li>
 				@Html.LabelFor(m => m.NewPassword)
-				@Html.PasswordFor(m => m.NewPassword, new { required = "required", pattern = RegexHelper.PasswordWeak, title = "Your password must be at least 8 characters long and cannot contain spaces", autofocus = "autofocus" })
+				@Html.PasswordFor(m => m.NewPassword, new { required = "required", pattern = RegularExpressions.PasswordWeakPattern, title = "Your password must be at least 8 characters long and cannot contain spaces", autofocus = "autofocus" })
 				@Html.ValidationMessageFor(m => m.NewPassword)
 			</li>
 			<li>
