--- a/MVC.WebUI/Views/Contact/email-confirm.cshtml
+++ b/MVC.WebUI/Views/Contact/email-confirm.cshtml
@@ -1,4 +1,7 @@
-﻿@using Domain.Configuration
+﻿@using MVC.Core.Configuration
+@using MVC.WebUI.Helpers
+
+@Html.Breadcrumb()
 
 <section id="email" class="email alert success">
     <h1>Thank you!</h1>
