--- a/MVC.WebUI/Views/Products/products.cshtml
+++ b/MVC.WebUI/Views/Products/products.cshtml
@@ -1,7 +1,11 @@
 ﻿@*@model MVC.WebUI.Models.Article.ProductIndexViewModel*@
+@using MVC.WebUI.Helpers
+
 @{
     ViewBag.Title = "Products";
 }
+
+@Html.Breadcrumb()
 
 <section>
 
