--- a/MVC.WebUI/Views/Account/register.cshtml
+++ b/MVC.WebUI/Views/Account/register.cshtml
@@ -1,5 +1,6 @@
-﻿@model WebUI.Models.Account.RegisterViewModel
-@using Domain.Helpers
+﻿@model MVC.WebUI.Models.Account.RegisterViewModel
+@using MVC.Core.Configuration
+
 @{
     ViewBag.Title = "Register";
 }
@@ -23,7 +24,7 @@
 			</li>
 			<li>
 				@Html.LabelFor(m => m.Password)
-				@Html.PasswordFor(m => m.Password, new { required = "required", pattern = RegexHelper.PasswordWeak, title = "Your password must be at least 8 characters long and cannot contain spaces" })
+				@Html.PasswordFor(m => m.Password, new { required = "required", pattern = RegularExpressions.PasswordWeakPattern, title = "Your password must be at least 8 characters long and cannot contain spaces" })
 				@Html.ValidationMessageFor(m => m.Password)
 			</li>
 			<li>
