AccountService  / IdentityAdapter - CreateAccount method created

--- a/MVC.WebUI/Views/Account/change-password.cshtml
+++ b/MVC.WebUI/Views/Account/change-password.cshtml
@@ -1,5 +1,6 @@
 ﻿@model MVC.WebUI.Models.Account.ChangePasswordViewModel
 @using MVC.WebUI.Helpers
+@using MVC.Core.Configuration
 
 @{
     ViewBag.Title = "Change Password";
@@ -32,7 +33,7 @@
 			</li>
 			<li>
 				@Html.LabelFor(m => m.NewPassword)
-				@Html.PasswordFor(m => m.NewPassword, new { required = "required", pattern = RegexHelper.PasswordWeak, title = "Your password must be at least 8 characters long and cannot contain spaces" })
+				@Html.PasswordFor(m => m.NewPassword, new { required = "required", pattern = RegularExpressions.PasswordWeakPattern, title = "Your password must be at least 8 characters long and cannot contain spaces" })
 				@Html.ValidationMessageFor(m => m.NewPassword)
 			</li>
 			<li>
