--- a/MVC.WebUI/Views/Account/change-password.cshtml
+++ b/MVC.WebUI/Views/Account/change-password.cshtml
@@ -33,7 +33,7 @@
 			</li>
 			<li>
 				@Html.LabelFor(m => m.NewPassword)
-				@Html.PasswordFor(m => m.NewPassword, new { required = "required", pattern = RegularExpressions.PasswordWeakPattern, title = "Your password must be at least 8 characters long and cannot contain spaces" })
+				@Html.PasswordFor(m => m.NewPassword, new { required = "required", pattern = FormPatterns.PasswordWeakPattern, title = "Your password must be at least 8 characters long and cannot contain spaces" })
 				@Html.ValidationMessageFor(m => m.NewPassword)
 			</li>
 			<li>
